# project-2

./: .gitignore  CMakeLists.txt  README.md  linux1_runner.sh  mdw_interactive.sh  mdw_interactive_gpu.sh  mdw_runner.sh  runner.sh  writeup.md
cmake/: FindPAPI.cmake
data/: cache_hit_rate.numbers  host_dev.numbers  memory_util.numbers  overall.numbers  overall_report.numbers  serial_scaling.numbers  strong_weak_scaling.numbers  weak_scaling.numbers
gpu_examples/: CMakeLists.txt
papi/: papi.h
src/: CMakeLists.txt  nbody_cpu_multicore.c  nbody_cpu_serial.c  nbody_gpu1.cu  nbody_gpu2.cu  nbody_gpu3.cu  nbody_gpu4.cu
